--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,18 @@
 default: &default
   adapter: sqlite3
   pool: 5
-  tS
+  timeout: 5000
+
+development:
+  <<: *default
+  database: db/development.sqlite3
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  <<: *default
+  database: db/test.sqlite3
 
 production:
   <<: *default
